--- a/_data/staff.yaml
+++ b/_data/staff.yaml
@@ -4,24 +4,16 @@
     email: apoliak@brynmawr.edu
     webpage: https://azpoliak.github.io
     extra_title: Instructor
-    office_hours: TBD
+    office_hours: Thursday 3-4:45pm
     location: Park 200C
 -
-    name: Grace Choe
-    pic: gchoe.jpg
-    email: gchoe@brynmawr.edu
-    office_hours: TBD
+    name: NAME GOES HERE
+    pic: NAME OF FILE GOES HERE
+    email: UPDATE
+    office_hours: UPDATE
     extra_title: Teaching Assistant
     location: Park 231
 -
-    name: Abhi Suresh
-    pic: asuresh.png
-    email: asuresh@brynmawr.edu
+    name: Brisa Kane
+    email: UPDATE
     extra_title: TLI Student Consultant
--
-    name: name
-    pic: tmp.jpg
-    email: email
-    office_hours: DAY, TIME
-    extra_title: Teaching Assistant
-    location: location
