--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/website" # the subpath of your site, e.g. /blog
-url: "https://cs.brynmawr.edu/cs113/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/fall2023ap" # the subpath of your site, e.g. /blog
+url: "https://cs.brynmawr.edu/Courses/cs113/"
 twitter_username: azpoliak
 github_username:  BMC-CS-113
 
