--- a/_data/staff.yaml
+++ b/_data/staff.yaml
@@ -15,5 +15,6 @@
     location: Park 231
 -
     name: Brisa Kane
-    email: UPDATE
+    email: bkane@haverford.edu
+    pic: bkane.jpeg
     extra_title: TLI Student Consultant
