--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -16,6 +16,7 @@
     - 
       date: 2023-09-07
       title: Lecture 2 <br> Data Types (Ints, doubles, strings)
+      slides: slides/lecture02.pdf
       readings:
         -
           title: "Chapter 2: Variables & Operators"
