--- a/_data/staff.yaml
+++ b/_data/staff.yaml
@@ -7,10 +7,10 @@
     office_hours: Thursday 3-4:45pm
     location: Park 200C
 -
-    name: NAME GOES HERE
+    name: Yiling Hou
     pic: NAME OF FILE GOES HERE
-    email: UPDATE
-    office_hours: UPDATE
+    email: yhou@brynmawr.edu
+    office_hours: Thursday 7-10pm
     extra_title: Teaching Assistant
     location: Park 231
 -
